--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <!-- HEADER -->
-    <header class="py-[34px] bg-[#FFC017] mb-[60px]">
+    <header class="py-[34px] bg-[#FFC017] ">
         <div class="flex max-w-[980px]  mx-auto justify-between">
             <a href="#" class="felx ">
                 <svg xmlns="http://www.w3.org/2000/svg" width="135" height="24" viewBox="0 0 135 24" fill="none">
@@ -53,7 +53,8 @@
 
 
     <!-- MEN BU ISHLARNI QILMAYMAN -->
-    <div class="max-w-[680px]  mx-auto mb-[60px]">
+  <section class="pt-[60px] pb-[30px]">
+    <div class="max-w-[680px]  mx-auto">
         <h2 class=" text-[48px] font-bold mb-[40px]">Men bu ishni qilmayman!</h2>
         <img class="h-[347px] mb-[40px]" src="./img/article-page-big-img (4).png" alt="">
         <p class="text-[21px] font-normal">
@@ -79,8 +80,46 @@
             bunin uchun siz ularning rivojlanishiga <br> sarmoya kiritishirgiz kerakdir.
         </p>
     </div>
+  </section>
+
+
+  <footer class="pt-[30px] pb-[286px]">
+    <div class="max-w-[1020px] mx-auto">
+        <h2 class="font-bold mb-[9px]">Foydali maqolalar</h2>
+        <svg class="mb-[20px]" xmlns="http://www.w3.org/2000/svg" width="1020" height="2" viewBox="0 0 1020 2" fill="none">
+            <path d="M0 1C398.335 1.00003 621.665 1.00005 1020 1.00009" stroke="#A9A9A9" stroke-width="2"/>
+          </svg>
+
+<div class="flex gap-[40px] ml-[20px]">
+<div class="max-w-[300px]">
+    <img class="mb-[20px]" src="./img/Rectangle 145.png" alt="">
+    <h2 class="text-[20px] font-bold font-serif mb-[7px]">Motivasiya bergim keladi ayrim payt</h2>
+    <p class="text-[14px] font-normal mb-[18px]">Lekin men etib bergan hikoyalar ko‘pincha tasirli bo‘lmaydi, negadir. Hikoya so‘zlash  ham <br> bir san’at ekan.</p>
+    <p class="text-[13px] font-medium">Avgust 13, 2022 </p>
+</div>
+
+<div class="max-w-[300px]">
+    <img class="mb-[20px]" src="./img/article-img-3.png" alt="">
+    <h2 class="text-[20px] font-bold font-serif mb-[7px]">Motivasiya bergim keladi ayrim payt</h2>
+    <p class="text-[14px] font-normal mb-[18px]">Lekin men etib bergan hikoyalar ko‘pincha tasirli bo‘lmaydi, negadir.</p>
+    <p class="text-[13px] font-medium">Avgust 13, 2022 </p>
+</div>
+
+<div class="max-w-[300px]">
+    <img class="mb-[20px]" src="./img/Rectangle 146.png" alt="">
+    <h2 class="text-[20px] font-bold font-serif mb-[7px]">Motivasiya bergim keladi ayrim payt</h2>
+    <p class="text-[14px] font-normal mb-[18px]">Qiyin bo‘lsa ham, bir nechta odam non topyapdi. Yana bir yil guv etib o‘tib ketdi.</p>
+    <p class="text-[13px] font-medium">Avgust 13, 2022 </p>
+</div>
+
+
+</div>
+
+
+    </div>
+  </footer>
+
 
 
 </body>
-
 </html>
