--- a/index.html
+++ b/index.html
@@ -50,76 +50,85 @@
             </ul>
         </div>
     </header>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perferendis veniam cum deleniti ullam repellendus possimus vel itaque laudantium. Ipsum at cum recusandae eligendi nobis pariatur mollitia, id quae, corrupti velit architecto nesciunt voluptatum suscipit. Nulla illum magni incidunt laboriosam. Velit esse debitis recusandae natus vero ea, voluptatum magnam a cupiditate qui eveniet, quod nisi in asperiores deleniti aspernatur maxime? Aliquid in nihil necessitatibus dolorum suscipit asperiores corporis assumenda eligendi culpa laborum accusamus, laboriosam vero maxime? Ducimus sint maxime in consectetur dolor magnam sequi, quia ullam itaque enim beatae molestiae voluptatem explicabo, doloribus iure quo aliquam a omnis natus. Labore facere saepe illo voluptates vitae dolores reprehenderit voluptate aliquid veniam! Suscipit voluptatum at nobis quos alias! Molestiae suscipit tempore, consequatur dicta nesciunt molestias veniam?</p>
 
 
     <!-- MEN BU ISHLARNI QILMAYMAN -->
-  <section class="pt-[60px] pb-[30px]">
-    <div class="max-w-[680px]  mx-auto">
-        <h2 class=" text-[48px] font-bold mb-[40px]">Men bu ishni qilmayman!</h2>
-        <img class="h-[347px] mb-[40px]" src="./img/article-page-big-img (4).png" alt="">
-        <p class="text-[21px] font-normal">
-            Xodimlar biron ishni qilishdan to‘g‘ridan-to‘g‘ri yoki bilvosita bosh <br> tortadigan vaqtlar bo‘lib turadi
-            boshqaruv jarayonida. Qarshilikning qator <br> sabablari bor.
-            <br><br>
-            Bunday vaziyatlarda ta’sir o‘tkazish uchun ikkita usul bor suhbat <br> davomida:
-            <br><br>
-            <b class="">1) Fakt + Vazifa + Tahdid.</b> <br>
-            Masalan, savdo 20% tushib ketdi o‘tgan oyga qapaganda, chunki <br> raqobatchilar dam olib yotmayapti - bu
-            fakt.
-            <br><br>
-            Vazifani SMART tizimida bering. Tahdid esa bu hozirgi holatni <br> o‘zgartirmasa nimalarga olib kelishi.
-            <br><br>
-            <b class="">2) Fakt + Hissiyot</b> <br>
-            Masalan, boshim qotib qoldi savdo natijalari 20 % kamligidan.
-            <br><br>
-            Ertangi kundan qo‘rqyapman, shuncha ishchilardan havotirdaman...
-            <br><br>
+    <section class="pt-[60px] pb-[30px]">
+        <div class="max-w-[680px]  mx-auto">
+            <h2 class=" text-[48px] font-bold mb-[40px]">Men bu ishni qilmayman!</h2>
+            <img class="h-[347px] mb-[40px]" src="./img/article-page-big-img (4).png" alt="">
+            <p class="text-[21px] font-normal">
+                Xodimlar biron ishni qilishdan to‘g‘ridan-to‘g‘ri yoki bilvosita bosh <br> tortadigan vaqtlar bo‘lib
+                turadi
+                boshqaruv jarayonida. Qarshilikning qator <br> sabablari bor.
+                <br><br>
+                Bunday vaziyatlarda ta’sir o‘tkazish uchun ikkita usul bor suhbat <br> davomida:
+                <br><br>
+                <b class="">1) Fakt + Vazifa + Tahdid.</b> <br>
+                Masalan, savdo 20% tushib ketdi o‘tgan oyga qapaganda, chunki <br> raqobatchilar dam olib yotmayapti -
+                bu
+                fakt.
+                <br><br>
+                Vazifani SMART tizimida bering. Tahdid esa bu hozirgi holatni <br> o‘zgartirmasa nimalarga olib kelishi.
+                <br><br>
+                <b class="">2) Fakt + Hissiyot</b> <br>
+                Masalan, boshim qotib qoldi savdo natijalari 20 % kamligidan.
+                <br><br>
+                Ertangi kundan qo‘rqyapman, shuncha ishchilardan havotirdaman...
+                <br><br>
 
-            Biroq, bu faqt vaqtinchalik choralar. Xodimlarni sizga yechimlar bilan <br> kelishga o‘rgatish yaxshiroqdir
-            va
-            bunin uchun siz ularning rivojlanishiga <br> sarmoya kiritishirgiz kerakdir.
-        </p>
-    </div>
-  </section>
-
-
-  <footer class="pt-[30px] pb-[286px]">
-    <div class="max-w-[1020px] mx-auto">
-        <h2 class="font-bold mb-[9px]">Foydali maqolalar</h2>
-        <svg class="mb-[20px]" xmlns="http://www.w3.org/2000/svg" width="1020" height="2" viewBox="0 0 1020 2" fill="none">
-            <path d="M0 1C398.335 1.00003 621.665 1.00005 1020 1.00009" stroke="#A9A9A9" stroke-width="2"/>
-          </svg>
-
-<div class="flex gap-[40px] ml-[20px]">
-<div class="max-w-[300px]">
-    <img class="mb-[20px]" src="./img/Rectangle 145.png" alt="">
-    <h2 class="text-[20px] font-bold font-serif mb-[7px]">Motivasiya bergim keladi ayrim payt</h2>
-    <p class="text-[14px] font-normal mb-[18px]">Lekin men etib bergan hikoyalar ko‘pincha tasirli bo‘lmaydi, negadir. Hikoya so‘zlash  ham <br> bir san’at ekan.</p>
-    <p class="text-[13px] font-medium">Avgust 13, 2022 </p>
-</div>
-
-<div class="max-w-[300px]">
-    <img class="mb-[20px]" src="./img/article-img-3.png" alt="">
-    <h2 class="text-[20px] font-bold font-serif mb-[7px]">Motivasiya bergim keladi ayrim payt</h2>
-    <p class="text-[14px] font-normal mb-[18px]">Lekin men etib bergan hikoyalar ko‘pincha tasirli bo‘lmaydi, negadir.</p>
-    <p class="text-[13px] font-medium">Avgust 13, 2022 </p>
-</div>
-
-<div class="max-w-[300px]">
-    <img class="mb-[20px]" src="./img/Rectangle 146.png" alt="">
-    <h2 class="text-[20px] font-bold font-serif mb-[7px]">Motivasiya bergim keladi ayrim payt</h2>
-    <p class="text-[14px] font-normal mb-[18px]">Qiyin bo‘lsa ham, bir nechta odam non topyapdi. Yana bir yil guv etib o‘tib ketdi.</p>
-    <p class="text-[13px] font-medium">Avgust 13, 2022 </p>
-</div>
+                Biroq, bu faqt vaqtinchalik choralar. Xodimlarni sizga yechimlar bilan <br> kelishga o‘rgatish
+                yaxshiroqdir
+                va
+                bunin uchun siz ularning rivojlanishiga <br> sarmoya kiritishirgiz kerakdir.
+            </p>
+        </div>
+    </section>
 
 
-</div>
+    <footer class="pt-8 pb-[286px]">
+        <div class="max-w-[1020px] mx-auto">
+            <h2 class="font-bold mb-[9px]">Foydali maqolalar</h2>
+            <svg class="mb-[20px]" xmlns="http://www.w3.org/2000/svg" width="1020" height="2" viewBox="0 0 1020 2"
+                fill="none">
+                <path d="M0 1C398.335 1.00003 621.665 1.00005 1020 1.00009" stroke="#A9A9A9" stroke-width="2" />
+            </svg>
+
+            <div class="grid grid-cols-3 gap-10 ml-[20px]">
+                <div class="">
+                    <img class="mb-[20px]" src="./img/Rectangle 145.png" alt="">
+                    <h2 class="text-[20px] font-bold font-serif mb-[7px]">Motivasiya bergim keladi ayrim payt</h2>
+                    <p class="text-[14px] font-normal mb-[18px]">Lekin men etib bergan hikoyalar ko‘pincha tasirli
+                        bo‘lmaydi, negadir. Hikoya so‘zlash ham <br> bir san’at ekan.</p>
+                    <p class="text-[13px] font-medium">Avgust 13, 2022 </p>
+                </div>
+
+                <div class="">
+                    <img class="mb-[20px]" src="./img/article-img-3.png" alt="">
+                    <h2 class="text-[20px] font-bold font-serif mb-[7px]">Motivasiya bergim keladi ayrim payt</h2>
+                    <p class="text-[14px] font-normal mb-[18px]">Lekin men etib bergan hikoyalar ko‘pincha tasirli
+                        bo‘lmaydi, negadir.</p>
+                    <p class="text-[13px] font-medium">Avgust 13, 2022 </p>
+                </div>
+
+                <div class="">
+                    <img class="mb-[20px]" src="./img/Rectangle 146.png" alt="">
+                    <h2 class="text-[20px] font-bold font-serif mb-[7px]">Motivasiya bergim keladi ayrim payt</h2>
+                    <p class="text-[14px] font-normal mb-[18px]">Qiyin bo‘lsa ham, bir nechta odam non topyapdi. Yana
+                        bir yil guv etib o‘tib ketdi.</p>
+                    <p class="text-[13px] font-medium">Avgust 13, 2022 </p>
+                </div>
 
 
-    </div>
-  </footer>
+            </div>
+
+
+        </div>
+    </footer>
 
 
 
 </body>
+
 </html>
